Fix toolbar pos on mobile

--- a/src/assets/styles/cmps/board/_board-header.scss
+++ b/src/assets/styles/cmps/board/_board-header.scss
@@ -38,7 +38,7 @@
 
         .board-filter {
             position: fixed;
-            bottom: -15px;
+            bottom: -20px;
             left: 50%;
             transform: translate(-50%, -50%);
             background-color: $clr-bg-header;
